--- a/src/main/resources/templates/hausse/hausseForm.html
+++ b/src/main/resources/templates/hausse/hausseForm.html
@@ -3,7 +3,7 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
-<link th:replace="~{include :: cssdatetimepicker}" />
+<link th:replace="~{include :: cssdatetimepicker}">
 <script th:inline="javascript">
 		const hausseNoms = /*[[${hausseNoms}]]*/null;
 		const nomexiste = /*[[#{nomexiste}]]*/null;
