--- a/src/main/resources/templates/passwordResetForm.html
+++ b/src/main/resources/templates/passwordResetForm.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 </head>
 <body>
 	<br>
 	<form th:action="@{/resetPassword}" method="post" id="resetPassword">
 		<div class="mb-3">
-			<label class="form-label" for="email" th:text="#{email}"></label>
-			<input type="text" class="form-control" id="email" name="email" autofocus />
+			<label class="form-label" for="email" th:text="#{email}"></label> <input
+				type="text" class="form-control" id="email" name="email" autofocus>
 		</div>
 		<br>
 		<div class="mb-3">
-			<input class="btn btn-primary" type="submit" th:value="#{resetPassword}" />
+			<input class="btn btn-primary" type="submit"
+				th:value="#{resetPassword}">
 		</div>
 	</form>
 	<br>
