--- a/src/main/resources/templates/resetPasswordForm.html
+++ b/src/main/resources/templates/resetPasswordForm.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 </head>
-<body>        
+<body>
 	<br>
-	<form th:action="@{/resetPasswordFin}" method="post" id="resetPasswordFin">
-		<input type="hidden" id="token" name="token" th:value="${token}" />
+	<form th:action="@{/resetPasswordFin}" method="post"
+		id="resetPasswordFin">
+		<input type="hidden" id="token" name="token" th:value="${token}">
 		<div class="mb-3">
-			<label class="form-label" for="password" th:text="#{motDePasse}"></label> 
-			<input
-				 type="password" class="form-control" id="password" name="password" value="" autofocus />
+			<label class="form-label" for="password" th:text="#{motDePasse}"></label>
+			<input type="password" class="form-control" id="password"
+				name="password" value="" autofocus />
 		</div>
-		<br/>
+		<br>
 		<div class="mb-3">
-			<input class="btn btn-primary" type="submit" th:value="#{resetPassword}" />
+			<input class="btn btn-primary" type="submit"
+				th:value="#{resetPassword}">
 		</div>
 	</form>
-	<br/>
+	<br>
 </body>
 </html>
