--- a/src/main/resources/templates/rucher/rucherDetailGg.html
+++ b/src/main/resources/templates/rucher/rucherDetailGg.html
@@ -54,7 +54,7 @@
 				</h1>
 			</div>
 			<div class="col">
-				<input type="text" th:placeholder="#{recherche}" id="searchtext" />
+				<input type="text" th:placeholder="#{recherche}" id="searchtext">
 				<span class="padicons"> <input type="checkbox"
 					id="dragMarker" th:title="#{markerFixes}" checked />
 				</span> <span id="liste" class="liste bi-list-ul cursorpointer"
