--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -28,8 +28,8 @@ th {
 	overflow-x: auto;
 }
 </style>
-<link th:replace="~{include :: weather-icons}" />
-<link th:replace="~{include :: weather-icons-wind}" />
+<link th:replace="~{include :: weather-icons}">
+<link th:replace="~{include :: weather-icons-wind}">
 </head>
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
