--- a/src/main/resources/templates/essaim/essaimAssociationForm.html
+++ b/src/main/resources/templates/essaim/essaimAssociationForm.html
@@ -4,7 +4,7 @@
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsruches}"></script>
 <script th:replace="~{include :: jsdatetimepicker}"></script>
-<link th:replace="~{include :: cssdatetimepicker}" />
+<link th:replace="~{include :: cssdatetimepicker}">
 <script th:replace="~{include :: localejsdatetimepicker}"></script>
 <script th:inline="javascript">
 	/* exported doitEtreSupA, dateFirst, timeFirst, ruche, ruchesource, ruchetxt,
