--- a/src/main/resources/templates/essaim/essaimCommentaireForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireForm.html
@@ -3,7 +3,7 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
-<link th:replace="~{include :: cssdatetimepicker}" />
+<link th:replace="~{include :: cssdatetimepicker}">
 <script th:replace="~{include :: localejsdatetimepicker}"></script>
 <script>
 		document.addEventListener('DOMContentLoaded', () => {
@@ -42,9 +42,10 @@
 	<form action="#" th:action="@{'/evenement/essaim/commentaire/sauve'}"
 		th:object="${evenement}" method="post" id="evenementForm">
 		<input type="hidden" th:field="*{id}"> <input type="hidden"
-			th:field="*{type}"> <input type="hidden" th:field="*{ruche}"> <input
-			type="hidden" th:field="*{rucher}"> <input type="hidden"
-			th:field="*{essaim}"> <input type="hidden" th:field="*{hausse}">
+			th:field="*{type}"> <input type="hidden" th:field="*{ruche}">
+		<input type="hidden" th:field="*{rucher}"> <input
+			type="hidden" th:field="*{essaim}"> <input type="hidden"
+			th:field="*{hausse}">
 		<div th:replace="~{includeForm :: dateField}"></div>
 		<div th:replace="~{includeForm :: commentaireField}"></div>
 		<div th:replace="~{includeForm :: notifDelaiField}"></div>
