--- a/src/main/resources/templates/essaim/essaimDispersionLotForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionLotForm.html
@@ -3,7 +3,7 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
-<link th:replace="~{include :: cssdatetimepicker}" />
+<link th:replace="~{include :: cssdatetimepicker}">
 <script th:replace="~{include :: localejsdatetimepicker}"></script>
 <script>
 		document.addEventListener('DOMContentLoaded', () => {
@@ -43,8 +43,8 @@
 		id="essaimDispLotForm">
 		<div class="form-check">
 			<input class="form-check-input" type="checkbox" id="depot"
-				name="depot" checked> <label class="form-check-label" for="depot"
-				th:text="#{retourrucheaudepot}"></label>
+				name="depot" checked> <label class="form-check-label"
+				for="depot" th:text="#{retourrucheaudepot}"></label>
 		</div>
 		<div id="divevencadre" class="form-check">
 			<input class="form-check-input" type="checkbox" id="evencadre"
