--- a/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
+++ b/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
@@ -4,7 +4,7 @@
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: moment}"></script>
 <script th:replace="~{include :: jquerydaterangepicker}"></script>
-<link th:replace="~{include :: cssjquerydaterangepicker}" />
+<link th:replace="~{include :: cssjquerydaterangepicker}">
 <script th:replace="~{include :: jsruchesnom('evenementListe')}"></script>
 <script th:inline="javascript">
 		/* exported Evenements, buttontextprint, buttontextcol */
