--- a/src/main/resources/templates/hausse/hausseCommentaireLotForm.html
+++ b/src/main/resources/templates/hausse/hausseCommentaireLotForm.html
@@ -3,7 +3,7 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
-<link th:replace="~{include :: cssdatetimepicker}" />
+<link th:replace="~{include :: cssdatetimepicker}">
 <script th:replace="~{include :: localejsdatetimepicker}"></script>
 <script>
 		document.addEventListener('DOMContentLoaded', () => {
@@ -39,7 +39,7 @@
 	</div>
 	<form action="#" th:action="@{'/evenement/hausse/sauve/lot/'+${hIds}}"
 		method="post" id="evenementForm">
-		<input type="hidden" id="valeur" name="valeur" /> <input
+		<input type="hidden" id="valeur" name="valeur"> <input
 			type="hidden" id="typeEvenement" name="typeEvenement"
 			value="COMMENTAIREHAUSSE" />
 		<div th:replace="~{includeForm :: date}"></div>
