--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -4,7 +4,7 @@
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsruches}"></script>
 <script th:replace="~{include :: jsdatetimepicker}"></script>
-<link th:replace="~{include :: cssdatetimepicker}" />
+<link th:replace="~{include :: cssdatetimepicker}">
 <script th:replace="~{include :: localejsdatetimepicker}"></script>
 <script th:inline="javascript">
 	/* exported	_csrf_token, _csrf_param_name, suppRecHauss, dateRecEpoch,
@@ -105,7 +105,7 @@
 						</h6>
 					</div>
 					<div class="col">
-						<span class="padicons"> <input type="checkbox" id="group" />
+						<span class="padicons"> <input type="checkbox" id="group">
 							<label for="group" th:text="#{HaussesGroup}"></label>
 						</span>
 					</div>
