--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -34,8 +34,8 @@
 	</div>
 	<form action="#" th:action="@{/recolte/detail/sauve}"
 		th:object="${detailRecolte}" method="post" id="recolteHausseForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{recolte}" /> <input type="hidden" th:field="*{hausse}" />
+		<input type="hidden" th:field="*{id}"> <input type="hidden"
+			th:field="*{recolte}" /> <input type="hidden" th:field="*{hausse}">
 		<div class="form-floating mb-3">
 			<input class="form-control" placeholder="" type="number"
 				th:min="${detailRecolte.hausse.poidsVide}" max="80" step="0.001"
@@ -49,8 +49,7 @@
 				class="form-label" th:text="#{poidsApres}" for="poidsApres"></label>
 		</div>
 		<button type="button" id="toggleplus" th:text="#{plus}"></button>
-		<br>
-		<br>
+		<br> <br>
 		<div class="form-floating mb-3 toggleplus">
 			<select class="form-control" th:field="*{essaim}" disabled>
 				<option th:value="*{essaim?.id}" th:text="*{essaim?.nom}"></option>
