--- a/src/main/resources/templates/ruche/rucheCadreForm.html
+++ b/src/main/resources/templates/ruche/rucheCadreForm.html
@@ -3,7 +3,7 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
-<link th:replace="~{include :: cssdatetimepicker}" />
+<link th:replace="~{include :: cssdatetimepicker}">
 <script th:replace="~{include :: localejsdatetimepicker}"></script>
 <script th:inline="javascript">
 		document.addEventListener('DOMContentLoaded', () => {
@@ -48,10 +48,11 @@
 	</div>
 	<form action="#" th:action="@{'/evenement/essaim/sauve'}"
 		th:object="${evenement}" method="post" id="evenementForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{type}" /> <input type="hidden" th:field="*{ruche}" /> <input
-			type="hidden" th:field="*{rucher}" /> <input type="hidden"
-			th:field="*{essaim}" /> <input type="hidden" th:field="*{hausse}" />
+		<input type="hidden" th:field="*{id}"> <input type="hidden"
+			th:field="*{type}"> <input type="hidden" th:field="*{ruche}">
+		<input type="hidden" th:field="*{rucher}"> <input
+			type="hidden" th:field="*{essaim}"> <input type="hidden"
+			th:field="*{hausse}">
 		<div th:replace="~{includeForm :: dateField}"></div>
 		<div class="form-floating mb-3">
 			<input placeholder="" class="form-control" type="text"
