--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -4,8 +4,8 @@
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsol}"></script>
 <script th:replace="~{include :: jsGpPluginOpenLayers}"></script>
-<link th:replace="~{include :: cssol}" />
-<link th:replace="~{include :: cssGpPluginOpenLayers}" />
+<link th:replace="~{include :: cssol}">
+<link th:replace="~{include :: cssGpPluginOpenLayers}">
 <script th:replace="~{include :: jsruchesnom('rucherDetailOl')}"></script>
 <script th:replace="~{include :: jsruchesnom('rucherDetailCarto')}"></script>
 <script th:replace="~{include :: dom-to-image}"></script>
@@ -80,7 +80,7 @@
 				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
 					data-bs-trigger="focus" tabindex="0" role="button"
 					th:attr="data-bs-content=#{aiderucherdetailignmarkers}"></a> &nbsp;
-				<input type="text" th:placeholder="#{recherche}" id="searchtext" />
+				<input type="text" th:placeholder="#{recherche}" id="searchtext">
 				<span class="padicons"> <input type="checkbox"
 					id="dragMarker" th:title="#{markerFixes}" checked />
 				</span> <a th:href="@{'/rucher/rapproche/Ign/'+${rucher.id}}"
