--- a/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
+++ b/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
@@ -3,7 +3,7 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
-<link th:replace="~{include :: cssdatetimepicker}" />
+<link th:replace="~{include :: cssdatetimepicker}">
 <script th:replace="~{include :: localejsdatetimepicker}"></script>
 <script th:inline="javascript">
 		const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
