essaimGrapheEve type traitement correction pour fin traitement

--- a/src/main/resources/templates/essaim/essaimGrapheEve.html
+++ b/src/main/resources/templates/essaim/essaimGrapheEve.html
@@ -10,7 +10,8 @@
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
 	/* exported poids, dates, poidsSucre, datesSucre, poidsRec, datesRec, ruchersRec, 
-	datesTrait, typesTrait, datesFinTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, 
+	datesTrait, typesTrait, typesTraitFin,
+	datesFinTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, 
 	datesHausses, nbHausses, ajoutHausses, nomRucheHausses, vide, ruchetxt, ajout, retrait */
 	const poids = /*[[${poids}]]*/null;
 	const dates = /*[[${dates}]]*/null;
@@ -21,6 +22,7 @@
 	const ruchersRec = /*[[${ruchersRec}]]*/null;
 	const datesTrait = /*[[${datesTrait}]]*/null;
 	const typesTrait = /*[[${typesTrait}]]*/null;
+	const typesTraitFin = /*[[${typesTraitFin}]]*/null;
 	const datesFinTrait = /*[[${datesFinTrait}]]*/null;
 	const datesRucher = /*[[${datesRucher}]]*/null;
 	const nomsRucher = /*[[${nomsRucher}]]*/null;
