infos.html nb de traitements annuels par type de traitement

--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -240,6 +240,11 @@
 								<td th:each="nbTraitements : ${nbTraitementsEssaims}"
 									th:text="${nbTraitements}"></td>
 							</tr>
+							<tr th:each="tpt, i : ${T(ooioo.ruches.evenement.TypeTraitement).values()}">
+								<th scope="row" th:text="#{${tpt}}"></th>
+								<td th:each="nbTraitements : ${nbTraitementsType[i.index]}"
+									th:text="${nbTraitements}"></td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
