--- a/src/main/resources/templates/evenement/evenementTraitementListe.html
+++ b/src/main/resources/templates/evenement/evenementTraitementListe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: moment}"></script>
@@ -13,7 +13,7 @@
 		const buttontextprint = /*[[#{buttontextprint}]]*/null;
 		const buttontextcol = /*[[#{buttontextcol}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
-			document.getElementById('groupe').addEventListener('click', event => {
+			document.getElementById('tous').addEventListener('click', event => {
 				location = location.href.slice(0, location.href.lastIndexOf('/'))
 					+ '/' + event.target.checked;
 			});
@@ -30,9 +30,9 @@
 					th:text="${tous} ? #{traitement} : #{eveDebutTraitement}"></h1>
 			</div>
 			<div class="col">
-				<span class="padicons"> <input type="checkbox" id="groupe"
-					th:title="#{tous}" th:checked="${tous}" /> <label for="tous"
-					th:text="#{tous}"></label>
+				<span class="padicons"> <input type="checkbox" id="tous"
+					th:checked="${tous}"> <label for="tous" th:text="#{tous}"
+					th:title="#{TraitementDebutFin}"></label>
 				</span>
 			</div>
 			<div
