améliorations : input void, lang, cookie samesite

--- a/src/main/resources/templates/recolte/recolteStat.html
+++ b/src/main/resources/templates/recolte/recolteStat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsruches}"></script>
@@ -19,7 +19,6 @@
 				<a th:href="@{#{urldoc}+'13359_3141829358'}" class="bi-book"
 					th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 			</div>
-
 		</div>
 	</div>
 	<div class="container-fluid table-responsive">
