--- a/src/main/resources/templates/rucher/ruchersListeIgn.html
+++ b/src/main/resources/templates/rucher/ruchersListeIgn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsol}"></script>
@@ -49,9 +49,9 @@
 				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
 					data-bs-trigger="focus" tabindex="0" role="button"
 					th:attr="data-bs-content=#{aiderucherlisteignmarkers}"></a> <input
-					type="text" th:placeholder="#{recherche}" id="searchtext" /> <span
-					class="padicons"> <input type="checkbox" id="dragMarker"
-					th:title="#{markerFixes}" checked />
+					type="text" th:placeholder="#{recherche}" id="searchtext">
+				<span class="padicons"> <input type="checkbox"
+					id="dragMarker" th:title="#{markerFixes}" checked>
 				</span>
 			</div>
 		</div>
