--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -125,9 +125,13 @@
 			<a th:if="${type}==''" th:href="@{'/evenement/liste'}"
 				th:text="#{evenements}"></a> <a th:if="${type=='sucre'}"
 				th:href="@{'/evenement/essaim/listeSucre'}"
-				th:text="#{evenementssucre}"></a> <a th:if="${type=='traitement'}"
-				th:href="@{'/evenement/essaim/listeTraitement/false'}"
-				th:text="#{evenementstraitement}"></a> <a th:if="${type=='poids'}"
+				th:text="#{evenementssucre}"></a> 
+				
+				<a th:if="${type=='traitement'}"
+				th:href="@{'/evenement/essaim/listeTraitement'}"
+				th:text="#{evenementstraitement}"></a> 
+				
+				<a th:if="${type=='poids'}"
 				th:href="@{'/evenement/ruche/listePoidsRuche'}"
 				th:text="#{evenementspoidsruche}"></a> <a th:if="${type=='cadre'}"
 				th:href="@{'/evenement/ruche/listeCadreRuche'}"
