evenementTraitementListe.html tooltip sur Grouper

--- a/src/main/resources/templates/evenement/evenementTraitementListe.html
+++ b/src/main/resources/templates/evenement/evenementTraitementListe.html
@@ -38,7 +38,7 @@
 					th:title="#{TraitementDebutFin}"></label>
 				</span> <span class="padicons"> <input form="evenementForm"
 					type="checkbox" id="groupe" name="groupe" th:checked="${groupe}">
-					<label for="groupe" th:text="#{grouper}"></label>
+					<label for="groupe" th:text="#{grouper}" th:title="#{GrouperTrt}"></label>
 				</span>
 			</div>
 			<div
